Changed File to index.html

--- a/Assignment_2_CSS_layoutDesign/Assignment_2_CSS_layoutDesign/02_HTML_Proposal_Doc/index.html
+++ b/Assignment_2_CSS_layoutDesign/Assignment_2_CSS_layoutDesign/02_HTML_Proposal_Doc/index.html
@@ -768,7 +768,7 @@
         <hr>
       </dl>
 
-      <a class="button" href="proposal.html">Return to Top <span class="material-symbols-outlined">arrow_upward</span></a>
+      <a class="button" href="index.html">Return to Top <span class="material-symbols-outlined">arrow_upward</span></a>
     </footer> 
 
   </body>
